--- a/A.read_kernel_symbol/testcode/read_component/Makefile
+++ b/A.read_kernel_symbol/testcode/read_component/Makefile
@@ -1,4 +1,4 @@
 all:
-	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include ksym.c -o ksym.o
+	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include GPIO.c -o gpio.o
 clean:
 	rm -rf *.o *.img *.map *.elf
