Add an execute component function.

--- a/E.file_system/testcode/GPIO_OP/Makefile
+++ b/E.file_system/testcode/GPIO_OP/Makefile
@@ -1,4 +1,4 @@
 all:
-	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include GPIO.c -o gpio_op.o
+	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include GPIO_OP.c -o gpio_op.o
 clean:
 	rm -rf *.o *.img *.map *.elf
