--- a/E.file_system/testcode/GPIO_OP21/Makefile
+++ b/E.file_system/testcode/GPIO_OP21/Makefile
@@ -1,4 +1,4 @@
 all:
-	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include GPIO_OP.c -o gpio_op21.o
+	aarch64-linux-gnu-gcc -c -fno-stack-protector -I./include GPIO_OP.c -o gpio21.o
 clean:
 	rm -rf *.o *.img *.map *.elf
